--- a/src/views/_shared/inlineStyles.html
+++ b/src/views/_shared/inlineStyles.html
@@ -1,1 +1,6 @@
-{% macro inlineStyles(styles) %}style="{% for property, value in styles%}{{ property }}: {{ value }};{% endfor %}"{% endmacro %}
+{% macro inlineStyles(styles) -%}
+  style="
+  {%- for property, value in styles -%}
+    {{ property }}: {{ value }};
+  {%- endfor -%}"
+{%- endmacro %}
