Fix navbar typo

--- a/src/views/_shared/_layout.html
+++ b/src/views/_shared/_layout.html
@@ -25,7 +25,7 @@
             <a class="block p-4" href="/">Schedule</a>
           </li>
           <li class="hidden md:block">
-            <a class="block p-4" href="/team-members/">Team members</a>
+            <a class="block p-4" href="/team-members/">Team Members</a>
           </li>
           <li class="hidden md:block">
             <a class="block p-4" href="/contexts/">Shift Contexts</a>
