Fix bugs; Improve schedule copy edit

--- a/src/views/schedule/week.html
+++ b/src/views/schedule/week.html
@@ -59,7 +59,7 @@
                   {{ formatDate(data) }}
                 </h2>
                 <div class="mt-4 flex justify-start gap-4">
-                  <a href="/schedule/copy/{{ formatDate(data, '/') }}/through/{{ formatDate(data, '/') }}/" class="block p-1 border rounded">
+                  <a href="/schedule/copy/from/{{ formatDate(data, '/') }}/through/{{ formatDate(data, '/') }}/" class="block p-1 border rounded">
                     Copy
                   </a>
                   <a href="/schedule/clear/{{ formatDate(data, '/') }}/through/{{ formatDate(data, '/') }}/" class="block p-1 border rounded">
