Add integration tests

--- a/src/views/teamMember/edit.html
+++ b/src/views/teamMember/edit.html
@@ -8,7 +8,7 @@
   {% set cancel = "/team-member/" + model.teamMember.id + "/" %}
 {% else %}
   {% set verb = "Add" %}
-  {% set action = "/team-member/add/" %}
+  {% set action = "/team-members/add/" %}
   {% set cancel = "/team-members/" %}
 {% endif %}
 
