--- a/src/views/timeSlot/edit.html
+++ b/src/views/timeSlot/edit.html
@@ -97,6 +97,7 @@
       </div>
       <div class="mt-8 flex gap-4 justify-center">
         <input type="hidden" name="timeSlotId" value="{{ model.timeSlot.id }}" />
+        <input type="hidden" name="cancelLink" value="{{ model.cancel }}" />
         {{ csrf(model) }}
         <input type="submit" value="Save" class="block p-2 bg-green-300 rounded" />
         <a href="{{ model.cancel }}" class="block p-2 bg-gray-300 rounded">Cancel</a>
